# python_advanced_diploma

./: .env  .env.template  README.md  alembic.ini  config.py  docker-compose.yml  logging_conf.py  main.py  pyproject.toml  pytest.ini  setup.cfg
alembic/: env.py
alembic/versions/: 2024_12_22_1224-f96c2aaab5b4_create_tables.py  2024_12_22_1227-a097734b6fb9_add_colomns_create_at_and_updated_at.py  2024_12_23_1345-8ad34bc67884_edit_type_in_colomn_api_key_in_user_.py  2024_12_28_0616-e47e0bb54cc8_edit_name_colomn_file_link_on_file_name_.py
logs_conf/: log_utils.py  logging_conf.py  logging_test_conf.py  utils.py
src/: Dockerfile  __init__.py  loader.py
src/auth/: __init__.py  secure_user.py
src/crud/: __init__.py  api_key.py  base_crud.py  follow.py  like.py  media.py  tweet.py  user.py
src/database/: __init__.py  async_session.py  session_manager.py
src/database/models/: __init__.py  api_key_model.py  base_model.py  follow_model.py  like_model.py  media.py  media_model.py  tweet.py  tweet_model.py  user.py  user_model.py
src/routes/: __init__.py  create_media.py  create_tweet.py  create_user.py  delete_follow.py  delete_like.py  delete_tweet.py  follow.py  get_all_users.py  get_tweet.py  get_tweets.py  get_user.py  get_user_by_id.py  home_route.py  like_tweet.py  load_media_for_tweet.py
src/routes/dependencies/: load_media.py  search_user_by_id.py
src/schemas/: __init__.py  api_key.py  base_api_schema.py  error.py  tweet.py  user.py
src/tests/: conftest.py  factories.py  test_tweet.py  test_user.py
src/utils/: __init__.py  create_unic_out_path.py  followers_to_dict.py  get_db_url.py  remove_images.py
web/: nginx.conf
web/static/: index.html
(+3 files in other folders)
